# dx-learn

./: .gitignore  .gitmodules  BaseApp.cpp  BaseApp.h  CMakeLists.txt  ImageRenderer.cpp  ImageRenderer.h  Main.cpp  ShaderLoader.cpp  ShaderLoader.h  TextRenderer.cpp  TextRenderer.h  TextRendererLegacy.h
Assets/: imageRendererShader.fx  textShader.fx
demos/: CMakeLists.txt
demos/BlankApp/: BlankApp.cpp  BlankApp.h  CMakeLists.txt
demos/FirstRender/: CMakeLists.txt  FirstRender.cpp  FirstRender.h
demos/FirstRender/Assets/: sampleShader.fx
demos/TextRender/: CMakeLists.txt  TextRender.cpp  TextRender.h
utils/: CMakeLists.txt  FontBitmapRenderer.cpp  FontBitmapRenderer.h  TextRendererLegacy.cpp
